--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ psycopg2-binary==2.9.9
 SQLAlchemy==2.0.23
 gunicorn==21.2.0
 python-dotenv
+dash-ag-grid==31.2.0
+dash-bootstrap-components==1.6.0
+dash-mantine-components==0.12.0
