Set up code checking with Ruff

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 venv/*
 *.ipynb
 .DS_Store
+# Ignore all .pyc files
+**/*.pyc
+
+# Ignore all __pycache__ directories
+**/__pycache__/*
+
+utils/__pycache__/components.cpython-312.pyc
+
+*/__pycache__
+__pycache__
